Fix Gemini API integration and Render deployment